--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@privy-io/react-auth": "^2.14.1",
     "dotenv": "^16.5.0",
+    "firebase": "^11.9.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "next": "15.3.3",
