--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,12 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm run build"
+buildCommand = "echo 'Building from railway.toml' && npm run build"
 
 [deploy]
-startCommand = "npm run start:cron"
+startCommand = "echo 'Starting from railway.toml' && npm run start:cron"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 
 [[cron]]
 schedule = "* * * * *"
-command = "curl -X GET -H 'Authorization: Bearer $CRON_SECRET_KEY' $RAILWAY_PUBLIC_DOMAIN/api/cron/update-prices"
+command = "echo 'Running cron job from railway.toml' && curl -X GET -H 'Authorization: Bearer $CRON_SECRET_KEY' $RAILWAY_PUBLIC_DOMAIN/api/cron/update-prices"
