--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "dev:cron": "node server.js",
     "build": "next build --no-lint",
-    "start": "next start",
-    "start:cron": "cross-env NODE_ENV=production node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start:next": "next start",
     "lint": "next lint"
   },
   "dependencies": {
